# cinechroma_v2

./: .gitignore  README.md  get_mov_col_pal.py  get_mov_data.py  get_mov_title.py  pyproject.toml
cinechroma/: __init__.py  analyze.py  cli.py  extract.py  render.py  ui.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/data/: life_of_pi.json
frontend/src/components/: HueGraph.jsx  MovieCard.jsx  PaletteTimeline.jsx
frontend/src/data/: useMovieData.js
frontend/src/pages/: MovieDetail.jsx
legacy-code/: README.md
legacy-code/cine_chroma/: README.md
legacy-code/cine_chroma/frontend/: package-lock.json
legacy-code/cine_chroma/frontend/src/: App.jsx  index.css
legacy-code/cinechroma/: README.md  cinechroma.py
legacy-code/cinechroma_legacy/: get_mov_frame.py  get_title_sample.py  main.py  setup.sh
