[project]
name = "cinechroma"
version = "0.1.0"
description = "Film color analysis from the command line"
authors = ["Your Name <your.email@example.com>"]
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
cinechroma = "cinechroma.cli:main"

[tool.setuptools.packages.find]
where = ["cinechroma"]

[project.dependencies]
opencv-python = "*"
numpy = "*"
scikit-learn = "*"
scikit-image = "*"
Pillow = "*"
tqdm = "*"
argparse = "*"
rich = "*"
pyfiglet = "*"
